Correct Resource URLs

--- a/src/app/components/app/app.template.ejs
+++ b/src/app/components/app/app.template.ejs
@@ -10,18 +10,15 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta property="og:description" content="<%= htmlWebpackPlugin.options.description %>" />
-    <meta property="og:image" content="https://danziger.github.io/slotjs/screenshots/slotjs.png" />
+    <meta property="og:image" content="https://abc6xyz.github.io/circular-slot-machine/screenshots/slotjs.png" />
     <meta property="og:image:width" content="1920" />
     <meta property="og:image:height" content="971" />
     <meta property="og:image:alt" content="<%= htmlWebpackPlugin.options.title %>" />
-    <meta property="og:url" content="https://danziger.github.io/slotjs/" />
+    <meta property="og:url" content="https://abc6xyz.github.io/circular-slot-machine/" />
 
     <meta name="twitter:title" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta name="twitter:description" content="<%= htmlWebpackPlugin.options.description %>" />
-    <meta name="twitter:image" content="https://danziger.github.io/jobjs/static/screenshots/slotjs.png" />
-    <meta name="twitter:site" content="https://danziger.github.io/jobjs/" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@gmzcodes" />
 
     <meta name="title" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta name="description" content="<%= htmlWebpackPlugin.options.description %>" />
@@ -30,7 +27,7 @@
     <meta name="screen-orientation" content="portrait" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 
-    <link rel="canonical" href="https://danziger.github.io/slotjs/" />
+    <link rel="canonical" href="https://abc6xyz.github.io/circular-slot-machine/" />
 
 
     <!-- PWA -->
@@ -38,38 +35,11 @@
     <meta name="theme-color" content="white" />
     <!-- <link rel="manifest" href="manifest.json" /> -->
 
-
-    <!-- ICONS -->
-
-    <!--
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
-
-    <link rel="icon" href="logo/gmzcodes-t-e-16.png" type="image/png" sizes="16x16">
-    <link rel="icon" href="logo/gmzcodes-t-e-32.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="logo/gmzcodes-t-e-48.png" type="image/png" sizes="48x48">
-    <link rel="icon" href="logo/gmzcodes-t-e-64.png" type="image/png" sizes="64x64">
-    <link rel="icon" href="logo/gmzcodes-t-e-96.png" type="image/png" sizes="96x96">
-    <link rel="icon" href="logo/gmzcodes-t-e-128.png" type="image/png" sizes="128x128">
-    <link rel="icon" href="logo/gmzcodes-t-e-192.png" type="image/png" sizes="192x192">
-    <link rel="icon" href="logo/gmzcodes-t-e-256.png" type="image/png" sizes="256x256">
-    <link rel="icon" href="logo/gmzcodes-t-e-512.png" type="image/png" sizes="512x512">
-
-    <link rel="apple-touch-icon" sizes="57x57" href="logo/gmzcodes-s-e-57.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="logo/gmzcodes-s-e-76.png">
-    <link rel="apple-touch-icon" sizes="112x112" href="logo/gmzcodes-s-e-112.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="logo/gmzcodes-s-e-120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="logo/gmzcodes-s-e-144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="logo/gmzcodes-s-e-152.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="logo/gmzcodes-s-e-167.png">
-    <link rel="apple-touch-icon" sizes="176x176" href="logo/gmzcodes-s-e-176.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="logo/gmzcodes-s-e-180.png">
-    -->
-
     <!-- ANALYTICS & SITE VERIFICATION -->
 
     <meta name="google-site-verification" content="6Xa2p_VrmGSIQeZNe8Qd3qnNgE3hIlH2wIhjX0DQYJ4" />
     <!-- <meta name="msvalidate.01" content="..." /> -->
-    <script defer data-domain="danziger.github.io/slotjs" src="https://plausible.io/js/plausible.js"></script>
+    <script defer data-domain="abc6xyz.github.io/circular-slot-machine" src="https://plausible.io/js/plausible.js"></script>
 
 
     <!-- FONTS -->
