--- a/src/app/components/header/header.template.ejs
+++ b/src/app/components/header/header.template.ejs
@@ -1,7 +1,7 @@
 <header class="header__base">
     <div class="header__content">
         <h1 class="header__title">
-            <a class="header__logoLink" href="https://danziger.github.io/slotjs/">
+            <a class="header__logoLink" href="https://abc6xyz.github.io/circular-slot-machine/">
                 <img class="header__logoImage" src="logo/slotjs-t-e-64.png" aria-hidden="true" />
                 <span class="header__logoText" id="title">SlotJS</span>
             </a>
