--- a/src/app/components/footer/footer.template.ejs
+++ b/src/app/components/footer/footer.template.ejs
@@ -1,14 +1,14 @@
 <footer class="footer__base">
     <ul class="footer__content">
         <li class="footer__option">
-            <a class="footer__link" href="https://gmzcodes.com" target="_blank" title="Visit GMZCodes">
-                <img class="footer__linkIcon" src="gmzcodes/gmzcodes-t-e-32.png" aria-hidden="true" />
-                <span class="footer__linkText" id="author">By GMZcodes</span>
+            <a class="footer__link" href="https://abc6xyz.com" target="_blank" title="Visit abc6xyz">
+                <img class="footer__linkIcon" src="abc6xyz/abc6xyz-t-e-32.png" aria-hidden="true" />
+                <span class="footer__linkText" id="author">By abc6xyz</span>
             </a>
         </li>
 
         <li class="footer__option">
-            <a class="footer__link" href="https://github.com/Danziger/slotjs" target="_blank" title="Visit GitHub Repo">
+            <a class="footer__link" href="https://github.com/abc6xyz/circular-slot-machine" target="_blank" title="Visit GitHub Repo">
                 <img class="footer__linkIcon" src="github/github-s-e-16.png" aria-hidden="true" />
                 <span class="footer__linkText" id="github">GitHub</span>
             </a>
